--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "grunt": "^1.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-htmlmin": "^3.1.0",
     "grunt-contrib-uglify": "^4.0.1"
   }
